# wukong

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README-mythology.md  README-zh.md  README.md  SECURITY.md  install.ps1  install.sh  wukong-thinking-upgrade-plan.md
.claude/rules/: 00-wukong-core.md
.claude/skills/: code-reviewer.md  hui.md  jie.md  orchestration.md  requirements-analyst.md  shi.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.wukong/: context
.wukong/commands/: wukong.md
.wukong/context/: alaya-config.yaml  anchors.md  index.json
.wukong/hooks/: hui-extract.py
.wukong/plans/: claude-code-alignment.md  cli-design.md  cli-requirements.md  demo-guide.md  wukong-design.md  wukong-system-overview.md
.wukong/rules/: 00-wukong-core.md  01-task-orchestration.md  02-verification.md  03-avatars.md  04-wisdom.md  05-ruyi-protocol.md
.wukong/rules-extended/: avatars.md  orchestration.md  ruyi.md
.wukong/rules-lite/: 00-wukong-core.md
.wukong/scheduler/: __init__.py  todo_integration.py
docs/: Wukong_2.0_Design.md  Wukong_2.0_Design_Digest.md  index.html
scripts/: ci-check.sh  run_hui_shi_test.py
tests/: hello_wukong.py  run_tests.py  test_context.py  test_hooks.py  test_hui_extract.py  test_hui_shi.py  test_install.sh  test_path_references.py  test_runtime.py  test_scheduler.py
wukong-cli/: README.md  pyproject.toml
wukong-cli/src/wukong_cli/: __init__.py  cli.py  core.py
wukong-cli/tests/: test_cli.py
(+106 files in other folders)
