[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wukong-cli"
version = "0.1.0"
description = "Wukong AI Agent Protocol Installer"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Wukong Team" }]
keywords = ["wukong", "ai", "agent", "claude", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
wukong = "wukong_cli.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/wukong_cli"]
